--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,10 +22,13 @@
         </activity>
 
         <provider
-            android:name="com.example.poblenou.eltemps.provider.EltempsProvider"
+            android:name=".provider.EltempsProvider"
             android:authorities="com.example.poblenou.eltemps.provider"
             android:exported="false" />
 
+        <activity
+            android:name=".SettingsActivity"
+            android:label="@string/title_activity_settings" />
     </application>
 
 </manifest>
